front fix for TXs break into expenses and transfers

--- a/src/style/Form.css
+++ b/src/style/Form.css
@@ -124,7 +124,6 @@
 }
 .avatar-description{
   width:3rem;
-  height:2rem;
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 10px;
@@ -135,3 +134,30 @@
 .multiselect-description{
   margin-left: 20px
 }
+
+
+/* Tags */
+.multiselectbox.tags{
+  margin: 20px 20px 20px 20px;
+}
+
+.tag-section{
+  display: flex;
+  padding: 5px;
+  gap:1rem;
+  background-color: #01640e;
+  border-radius: 5px;
+  color: var(--lightletterColor);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.tag-section-name{
+  
+}
+.tag-section-close{
+  align-self: flex-end;
+}
+
+/*Tags*/
+
+
