--- a/src/style/SlidingBox.css
+++ b/src/style/SlidingBox.css
@@ -8,7 +8,7 @@
 
   width: 100%;
   transform: translateX(-50%);
-  max-height: 80%; 
+  max-height: 50%;
 
   /* animation: inAnimationFormBox 50ms linear; */
   z-index: 1;
@@ -30,6 +30,7 @@
   from {
     bottom: -300px;
   }
+
   to {
     bottom: -0px;
   }
@@ -39,6 +40,7 @@
   from {
     bottom: -0px;
   }
+
   to {
     bottom: -300px;
   }
@@ -48,8 +50,9 @@
   background-color: #000000;
   opacity: 0.7;
   position: fixed;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
   z-index: 0;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  bottom: 0px;
 }
